# Housing_App

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start-all.bat  start-backend.bat  start-frontend.bat
backend/app/: __init__.py  config.py  main.py
backend/app/api/: investment_routes.py  market_routes.py  property_routes.py  renovation_routes.py  report_routes.py  schemas.py  valuation_routes.py
backend/app/data/: sample_comps.json  sample_market_trends.json  sample_material_costs.csv  sample_properties.json
backend/app/data_sources/: __init__.py  census_connector.py  (+4 more)
backend/tests/: test_api.py  test_comp_adjustment_formula.py  test_confidence_score.py  test_investment_service.py  test_renovation_formula.py  test_valuation_formula.py
data/processed/: README.md
data/raw/: README.md
data/sample/: README.md
docs/: api_documentation.md  data_sources.md  formula_methodology.md  future_roadmap.md  product_strategy.md  sales_positioning.md  tomorrow_project_plan.md  valuation_model_notes.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
government_housing_app/: README.md  app.py  requirements.txt
government_housing_app/data_analysis/: README.md
government_housing_app/database/: README.md
government_housing_app/tests/: __init__.py
notebooks/: comparable_sales_analysis.ipynb  renovation_cost_research.ipynb  valuation_model_research.ipynb
scripts/: run-tests.ps1  start-backend-dev.ps1  start-backend.ps1  start-frontend.ps1
(+60 files in other folders)
