[project]
name = "real-estate-intelligence-platform"
version = "0.1.0"
description = "Transparent real estate valuation and property intelligence MVP"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
